--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 build-ctc-Desktop_Qt_6_1_0_MinGW_64_bit-Debug/
+build-ctc-tests-Desktop_Qt_6_1_0_MinGW_64_bit-Debug
+build-CTCTests-Desktop_Qt_6_1_0_MinGW_64_bit-Debug
